--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 }
             }
            else {
-            	img = "night";
+            	img = "evening";
 	       }
            window.onload = function () {
            	document.getElementById("dynamicImage").src = img + ".jpg";
